# biodiff

./: AUTHORS  INSTALL.md  LICENSE  Makefile  Makefile.am  README  README.md  biodiff  biodiff.1.md  common.mk  configure.ac  configure.in  inversionfix.py  makeinversion.py  udiff2vcf  udiff2vcf.1.md  variantfilter.py
test/: integration-wrapper
test/exec/: integration
test/lambda-phage/: end-insertion.fasta  inversion.fasta
