AC_INIT([biodiff],[0.1.4],[aelghraoui@sdsu.edu])
AC_PATH_PROG([DIFF], [diff])
AC_PATH_PROG([PERL], [perl])
AC_PATH_PROG([BCFTOOLS], [bcftools])
AC_PATH_PROG([TABIX], [tabix])
AC_PATH_PROG([BGZIP], [bgzip])
AC_PATH_PROG([PANDOC], [pandoc])
AM_CONDITIONAL([HAVE_PANDOC], [test x$PANDOC != x])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
